(executables
 (libraries bigstringaf httpaf alcotest)
 (modules
   helpers
   test_client_connection
   test_httpaf
   test_iovec
   test_request
   test_response
   test_server_connection)
 (names   test_httpaf))

(alias
 (name runtest)
 (package httpaf)
 (deps test_httpaf.exe)
 (action (run %{deps})))
